// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'statemine' to 'kusama' using bridgeSDK cross-chain 'KSM' > after 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 12,
  "fromChain": "(rounded 8)",
  "toChain": "(rounded 12)",
}
`;

exports[`'statemine' to 'kusama' using bridgeSDK cross-chain 'KSM' > fee 1`] = `"(rounded 0.00008)"`;

exports[`'statemine' to 'kusama' using bridgeSDK cross-chain 'KSM' > initial 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 12,
  "fromChain": 10,
  "toChain": 10,
}
`;
